--- a/assignment_1/Rakefile
+++ b/assignment_1/Rakefile
@@ -1,7 +1,6 @@
 require 'rake/testtask'
 
 Rake::TestTask.new do |t|
-  t.libs << 'tests'
-  t.test_files = FileList['tests/test*.rb']
-  t.verbose = true
+  t.libs << %w(test lib)
+  t.pattern = 'test/*.rb'
 end
